--- a/index.html
+++ b/index.html
@@ -318,6 +318,10 @@
   
   
 </div>
+<div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  Coded by <a href="#">Sailaja</a>.
+</div>
   <!--Javascript for Toggle Menu-->
   <script>
     var navItems=document.getElementById('nav-items')
