--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 15px; text-align: center; }
-    .attribution a { color: hsl(228, 17%, 94%);background: hsl(228, 45%, 44%); }
+    .attribution { font-size: 15px; text-align: center; background: hsl(228, 45%, 44%);}
+    .attribution a { color: hsl(228, 17%, 94%); }
     * {
   box-sizing: border-box;
   border: 0px solid red;
