--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 @media only screen and (max-width: 700px) {
   /* For mobile phones: */
+  
   [class*="col-"] {
     width: 100vw;
   }
@@ -55,6 +56,7 @@
 .rootDiv{
   overflow-x: hidden;
   overflow-y: hidden;
+  padding:10px
 }
 .menu-mobile{
   visibility: hidden
@@ -117,11 +119,12 @@
 }
 .rowTwo .col-9{
   border: 0px solid greenyellow;
+  
 }
 .rowTwo .col-3{
   background: #00001A;
-  max-height: 511px;
-  border:0px solid yellow
+  border:0px solid yellow;
+  
 }
 .col-9{
   padding: 0;
@@ -140,7 +143,7 @@
 
 
 .row-two .col-6{
-  height: 130px;
+  height: 160px;
 }
 .lastColumn{
   padding: 0;
@@ -151,7 +154,9 @@
   padding: 0;
   gap:30px;
 }
-
+.row-two .mobile{
+  display: none;
+}
 .row-two .col-12{
   margin-bottom: 28px;
 }
@@ -175,12 +180,22 @@
 }
 @media(max-width:700px){
  .body{
-  width: 100vw;
+  height: 100vh;
   overflow-x: hidden;
+  
+  
  }
  .rootDiv{
   overflow-x: hidden;
   overflow-y: auto;
+  border: 3px solid #f44336;
+  padding: 0px;
+  
+}
+.rootDiv .row{
+  width: 343px;
+  height: 28px;
+ 
 }
   .nav-items{
     position: fixed;
@@ -216,6 +231,23 @@
     right: 0;
     padding-top: 25px;
   }
+  .rowTwo{
+   
+    margin-top: 32px;
+    max-height: 100vh;
+  }
+  .rowTwo .col-3{
+    margin-top: 64px;
+  }
+  .col-9{
+  padding: 0;
+}
+  .row-two .col-12{
+    display: none;
+  }
+  .row-two .mobile{
+    display: inline-block;
+  }
   .row-two .heading{
     height:120px;
   }
@@ -234,6 +266,7 @@
   flex-direction: column;
   
 }
+
 }
   </style>
 </head>
@@ -260,6 +293,9 @@
         <div class="row-two">
           <div class="col-12" style="padding: 0;">
             <img src="./assets/images/image-web-3-desktop.jpg" style="max-width: 100%;max-height: 100%;"/>
+          </div>
+          <div class="col-12 mobile" style="padding: 0;">
+            <img src="./assets/images/image-web-3-mobile.jpg" style="max-width: 100%;max-height: 100%;"/>
           </div>
           <div class="col-6 heading" style="font-size: xx-large;color: #00001A;">
             <b>The Bright Future of Web 3.0?</b>
