mobileview_Overflow issue resolved

--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@ html, body {
   
  }
  .rootDiv{
- 
+  overflow-x: hidden;
+  overflow-y: auto;
   border: 0px solid #f44336;
   padding: 0px;
   
