body border removed

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ html, body {
 }
   </style>
 </head>
-<body style="border: 1px solid green;">
+<body >
   <div class="rootDiv" style="position: relative;">
 
      <div class="row"style="display: flex;">
