--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ html, body {
 .lastColumn{
   padding: 0;
   margin-top: 71px;
-  height: 129px;
+  height: 30%;
  
 }
 .last-flex{
@@ -184,6 +184,7 @@ html, body {
   color: #5E607A;
   font-weight: 400;
   font-size: 15px;
+
 }
 .lastFlexOne,.lastFlexTwo,.lastFlexThree{
   display: flex;
