Removed Unwanted  props in css

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
    
   
-      <div class="row footer" style="margin-top: auto;padding: 0;">
+      <div class="row footer">
         <div class="col-12" style="padding: 0;">
           <div class="attribution" style="padding: 0;">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
